--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ body{
     background-color: antiquewhite;
 }
 .container{
-    width: 800px;
-    background-color: #25CCF7;
+    width: 700px;
+    background-color: #2C3A47;
     margin-left: 300px;
     margin-top: 100px;
     border-radius: 10px;
@@ -39,12 +39,12 @@ input{
     font-size: large;
 }
 #labelBill{
-    margin-right: 80px;
+   margin-right: 82px;
 }
 button{
     width: 200px;
     padding: 15px;
-    color: #25CCF7;
+    color: #2C3A47;
     font-weight: bold;
     font-size: large;
     border-radius: 10px;
@@ -54,5 +54,11 @@ button:hover{
     background-color: burlywood;
 }
 #total{
-    text-align: center;
+    margin-left: 100px;
+}
+.logos{
+    margin-left: 520px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    word-spacing: 15px;   
 }
